add swagger for user handlers
